--- a/src/SecretBundle/Resources/views/SecretView/bootstrap.html.twig
+++ b/src/SecretBundle/Resources/views/SecretView/bootstrap.html.twig
@@ -1,6 +1,7 @@
 {% block stylesheets %}
     <link rel="stylesheet" href="{{ asset('css/main.css')}}">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 {% endblock %}
 
 <body class = "backgroundColor">
