--- a/src/SecretBundle/Resources/views/SecretView/addSomeStuff5.html.twig
+++ b/src/SecretBundle/Resources/views/SecretView/addSomeStuff5.html.twig
@@ -6,7 +6,7 @@
 
 
     <div>
-        <button name='kartofel' type='submit' value='kartofel' class='btn btn-default'>Zarejestruj użytkownika</button>
+        <button name='kartofel' type='submit' value='kartofel' class='btn btn-default'>Produkt save</button>
         <a href="{{ path('welcomePage') }}" class="btn btn-default">Wróć do strony głównej</a>
     </div>
     {{ form_end(form) }}
